ADD support multisession authentication; FIX WebSecurityConfig when happens accessDeniedException; REF test;